2014/05/12 - 1.0   - Fenix - initial release
2014/05/13 - 1.0.1 - Fenix - minor fixes to debug messages
2014/05/14 - 1.0.2 - Fenix - added a new proxy detection service based on the Location Plugin
2015/02/01 - 1.1   - Fenix - use the new plugin structure
                           - make plugin up to date with LocationPlugin changes
                           - remove compatibility with B3 1.9.x
                           - do not let the plugin crash B3 upon object construction
                           - postgresql support
2015/02/23 - 1.2   - Fenix - changed plugin to use EVT_CLIENT_AUTH to correctly match client level
2015/03/19 - 1.3   - Fenix - changed plugin to use the new GeolocationPlugin
2015/06/25 - 1.4   - Fenix - geolocation plugin is now a requirement
                           - added strong dependency with B3 v1.10.1