@@ -10,3 +10,4 @@
 2015/03/19 - 1.3   - Fenix - changed plugin to use the new GeolocationPlugin
 2015/06/25 - 1.4   - Fenix - geolocation plugin is now a requirement
                            - added strong dependency with B3 v1.10.1
+2015/06/26 - 1.5   - Fenix - better compatibility with geolocation plugin and B3 v1.10.1 core
